[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datazets"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Datazets is a python package to import well known example data sets."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["Python", ""]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'pandas',
    'requests',
]

[project.urls]
Homepage = "https://erdogant.github.io/datazets"
Download = "https://github.com/erdogant/datazets/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["datazets"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "datazets.__version__" }
